--- a/style.css
+++ b/style.css
@@ -1,8 +1,18 @@
 body {
     font-family: Arial, sans-serif;
     text-align: center;
-    background-color: #f4f4f4;
     padding: 20px;
+}
+
+.style {
+    background-color: rgb(56, 113, 211); 
+    width: 100%; 
+    padding: 90px;
+    background-size: cover; 
+    background-position: center; 
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
 }
 
 .timer {
@@ -17,7 +27,40 @@ body {
     cursor: pointer;
 }
 
+.time-inputs {
+    margin: 20px;
+}
+
+.time-inputs input {
+    font-size: 20px;
+    padding: 5px;
+    margin: 5px;
+}
+
+.time-inputs button {
+    font-size: 20px;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
 .routine {
+    field-sizing: border-box;
+    width: 100%;    
+    font-size: 50px;
     margin-top: 20px;
     font-size: 20px;
+}
+
+.Daily {
+    background-color: #18ddac;
+    width: 100%;
+    padding: 60px;
+    margin: 20px;
+}
+
+.study-table {
+    background-color: chocolate;
+    width: 100%;
+    border-collapse: collapse;
+    padding: 20px;
 }
